change App function ->App  Class & fix Navigation, Logo and imageLink z-index for backgAnimation

--- a/src/App.css
+++ b/src/App.css
@@ -13,5 +13,10 @@
   right: 0;
   bottom: 0;
   left: 0;
+  z-index: 0;
+}
+
+.zIndex {
+  position: relative;
   z-index: 1;
 }
