--- a/src/components/Logo/logo.css
+++ b/src/components/Logo/logo.css
@@ -1,3 +1,8 @@
 .Tilt {
     background: linear-gradient(to right, #636363, #a2ab58);
 }
+
+.zIndex {
+    position: relative;
+    z-index: 1;
+  }
